k8s/manifests/api1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api1
  labels:
    app: api1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api1
  template:
    metadata:
      labels:
        app: api1
    spec:
      containers:
      - name: httpbin
        image: mccutchen/go-httpbin
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api1-internal
spec:
  selector:
    app: api1
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api1
spec:
  ingressClassName: nginx
  rules:
    - host: api1.harp.demo
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api1-proxy
                port:
                  number: 80
            path: /
    - host: api1-internal.harp.demo
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api1-internal
                port:
                  number: 80
            path: /
  tls:
    - hosts:
        - api1.harp.demo
        - api1-internal.harp.demo
      secretName: demo-tls
