k8s/manifests/api3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api3
  labels:
    app: api3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api3
  template:
    metadata:
      labels:
        app: api3
    spec:
      containers:
      - name: httpbin
        image: mccutchen/go-httpbin
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api3-internal
spec:
  selector:
    app: api3
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api3
spec:
  ingressClassName: nginx
  rules:
    - host: api3.harp.demo
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api3-proxy
                port:
                  number: 80
            path: /
    - host: api3-internal.harp.demo
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api3-internal
                port:
                  number: 80
            path: /
  tls:
    - hosts:
        - api3.harp.demo
        - api3-internal.harp.demo
      secretName: demo-tls
