k8s/manifests/api4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api4
  labels:
    app: api4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api4
  template:
    metadata:
      labels:
        app: api4
    spec:
      containers:
      - name: httpbin
        image: mccutchen/go-httpbin
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api4-internal
spec:
  selector:
    app: api4
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api4
spec:
  ingressClassName: nginx
  rules:
    - host: api4.harp.demo
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api4-proxy
                port:
                  number: 80
            path: /
    - host: api4-internal.harp.demo
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: api4-internal
                port:
                  number: 80
            path: /
  tls:
    - hosts:
        - api4.harp.demo
        - api4-internal.harp.demo
      secretName: demo-tls
